--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,29 +24,28 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
+
       - name: Run linter
         id: lint_run
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            set -e
-            cd ${{ inputs.project_path }}
+        run: |
+          set -e
 
-            # Check formatting
-            UNFORMATTED=$(gofmt -l .)
-            if [ -n "$UNFORMATTED" ]; then
-              echo "The following files are not properly formatted:"
-              echo "$UNFORMATTED"
-              exit 1
-            fi
+          # Check formatting
+          UNFORMATTED=$(gofmt -l .)
+          if [ -n "$UNFORMATTED" ]; then
+            echo "The following files are not properly formatted:"
+            echo "$UNFORMATTED"
+            exit 1
+          fi
 
-            # Run go vet
-            go vet ./...
+          # Run go vet
+          go vet ./...
 
-            echo "✓ Linting passed"
+          echo "✓ Linting passed"
 
       - name: Set lint status
         id: lint_status
