--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -11,14 +11,6 @@ on:
         required: false
         type: string
         default: ""
-      lint_status:
-        required: false
-        type: string
-        default: "✓ PASSED"
-      lint_error:
-        required: false
-        type: string
-        default: ""
       build_status:
         required: false
         type: string
@@ -77,12 +69,11 @@ jobs:
         id: overall
         run: |
           SYNC="${{ inputs.sync_status }}"
-          LINT="${{ inputs.lint_status }}"
           BUILD="${{ inputs.build_status }}"
           DEPLOY="${{ inputs.deploy_status }}"
           HEALTH="${{ inputs.healthcheck_status }}"
 
-          if [[ "$SYNC" == *"FAILED"* ]] || [[ "$LINT" == *"FAILED"* ]] || [[ "$BUILD" == *"FAILED"* ]] || [[ "$DEPLOY" == *"FAILED"* ]] || [[ "$HEALTH" == *"FAILED"* ]]; then
+          if [[ "$SYNC" == *"FAILED"* ]] || [[ "$BUILD" == *"FAILED"* ]] || [[ "$DEPLOY" == *"FAILED"* ]] || [[ "$HEALTH" == *"FAILED"* ]]; then
             echo "status=FAILED" >> $GITHUB_OUTPUT
           else
             echo "status=PASSED" >> $GITHUB_OUTPUT
@@ -91,9 +82,6 @@ jobs:
           ERRORS=""
           if [[ "$SYNC" == *"FAILED"* ]]; then
             ERRORS="${ERRORS}Sync: ${{ inputs.sync_error }}<br>"
-          fi
-          if [[ "$LINT" == *"FAILED"* ]]; then
-            ERRORS="${ERRORS}Lint: ${{ inputs.lint_error }}<br>"
           fi
           if [[ "$BUILD" == *"FAILED"* ]]; then
             ERRORS="${ERRORS}Build: ${{ inputs.build_error }}<br>"
@@ -350,19 +338,15 @@ jobs:
                         <span class="stage-status ${{ contains(inputs.sync_status, 'FAILED') && 'failed' || (contains(inputs.sync_status, 'Not Run') && 'skipped' || 'passed') }}">${{ inputs.sync_status || '✓ PASSED' }}</span>
                       </div>
                       <div class="stage">
-                        <span class="stage-name">2. Go Linting</span>
-                        <span class="stage-status ${{ contains(inputs.lint_status, 'FAILED') && 'failed' || (contains(inputs.lint_status, 'Not Run') && 'skipped' || 'passed') }}">${{ inputs.lint_status || '✓ PASSED' }}</span>
-                      </div>
-                      <div class="stage">
-                        <span class="stage-name">3. Docker Build</span>
+                        <span class="stage-name">2. Docker Build</span>
                         <span class="stage-status ${{ contains(inputs.build_status, 'FAILED') && 'failed' || (contains(inputs.build_status, 'Not Run') && 'skipped' || 'passed') }}">${{ inputs.build_status || '✓ PASSED' }}</span>
                       </div>
                       <div class="stage">
-                        <span class="stage-name">4. Deployment</span>
+                        <span class="stage-name">3. Deployment</span>
                         <span class="stage-status ${{ contains(inputs.deploy_status, 'FAILED') && 'failed' || (contains(inputs.deploy_status, 'Not Run') && 'skipped' || 'passed') }}">${{ inputs.deploy_status || '✓ PASSED' }}</span>
                       </div>
                       <div class="stage">
-                        <span class="stage-name">5. Health Check</span>
+                        <span class="stage-name">4. Health Check</span>
                         <span class="stage-status ${{ contains(inputs.healthcheck_status, 'FAILED') && 'failed' || (contains(inputs.healthcheck_status, 'Not Run') && 'skipped' || 'passed') }}">${{ inputs.healthcheck_status || '✓ PASSED' }}</span>
                       </div>
                     </div>
